added intial moves

--- a/Ironcrunch/src/Ironcrunch.styl
+++ b/Ironcrunch/src/Ironcrunch.styl
@@ -369,10 +369,10 @@ span.sheet-showhide:hover
   transition: .5s ease;
 
 div.sheet-showhide
-  transition: opacity 1s ease-out;
-  opacity: 0;
-  height: 0;
-  overflow: hidden;
+  transition opacity 1s ease-out
+  opacity 0
+  height 0
+  overflow hidden
 
 .sheet-hide
   display none
@@ -405,60 +405,7 @@ input[type=radio].sheet-endure-harm:checked ~ div.sheet-endure-harm,
 input[type=radio].sheet-endure-stress:checked ~ div.sheet-endure-stress
   display: block
   opacity 1
-  height: auto;
-
-/* MOVES */
-input[type=radio].sheet-face-danger:checked ~ div.sheet-face-danger,
-input[type=radio].sheet-secure-advantage:checked ~ div.sheet-secure-advantage,
-input[type=radio].sheet-gather-information:checked ~ div.sheet-gather-information,
-input[type=radio].sheet-heal:checked ~ div.sheet-heal,
-input[type=radio].sheet-resupply:checked ~ div.sheet-resupply,
-input[type=radio].sheet-make-camp:checked ~ div.sheet-make-camp,
-input[type=radio].sheet-undertake-journey:checked ~ div.sheet-undertake-journey,
-input[type=radio].sheet-reach-destination:checked ~ div.sheet-reach-destination,
-input[type=radio].sheet-compel:checked ~ div.sheet-compel,
-input[type=radio].sheet-sojourn:checked ~ div.sheet-sojourn,
-input[type=radio].sheet-draw-the-circle:checked ~ div.sheet-draw-the-circle,
-input[type=radio].sheet-forge-bond:checked ~ div.sheet-forge-bond,
-input[type=radio].sheet-test-bond:checked ~ div.sheet-test-bond,
-input[type=radio].sheet-aid-ally:checked ~ div.sheet-aid-ally,
-input[type=radio].sheet-write-epilogue:checked ~ div.sheet-write-epilogue,
-input[type=radio].sheet-enter-the-fray:checked ~ div.sheet-enter-the-fray,
-input[type=radio].sheet-strike:checked ~ div.sheet-strike,
-input[type=radio].sheet-clash:checked ~ div.sheet-clash,
-input[type=radio].sheet-turn-the-tide:checked ~ div.sheet-turn-the-tide,
-input[type=radio].sheet-end-the-fight:checked ~ div.sheet-end-the-fight,
-input[type=radio].sheet-battle:checked ~ div.sheet-battle,
-input[type=radio].sheet-endure-harm:checked ~ div.sheet-endure-harm,
-input[type=radio].sheet-face-death:checked ~ div.sheet-face-death,
-input[type=radio].sheet-companion-endure-harm:checked ~ div.sheet-companion-endure-harm,
-input[type=radio].sheet-endure-stress:checked ~ div.sheet-endure-stress,
-input[type=radio].sheet-face-desolation:checked ~ div.sheet-face-desolation,
-input[type=radio].sheet-out-of-supply:checked ~ div.sheet-out-of-supply,
-input[type=radio].sheet-face-setback:checked ~ div.sheet-face-setback,
-input[type=radio].sheet-swear-vow:checked ~ div.sheet-swear-vow,
-input[type=radio].sheet-fulfill-vow:checked ~ div.sheet-fulfill-vow,
-input[type=radio].sheet-reach-milestone:checked ~ div.sheet-reach-milestone,
-input[type=radio].sheet-forsake-vow:checked ~ div.sheet-forsake-vow,
-input[type=radio].sheet-advance:checked ~ div.sheet-advance,
-input[type=radio].sheet-pay-the-price:checked ~ div.sheet-pay-the-price,
-input[type=radio].sheet-ask-the-oracle:checked ~ div.sheet-ask-the-oracle,
-input[type=radio].sheet-discover-site:checked ~ div.sheet-discover-site,
-input[type=radio].sheet-delve-the-depths:checked ~ div.sheet-delve-the-depths,
-input[type=radio].sheet-find-opportunity:checked ~ div.sheet-find-opportunity,
-input[type=radio].sheet-reveal-danger:checked ~ div.sheet-reveal-danger,
-input[type=radio].sheet-check-gear:checked ~ div.sheet-check-gear,
-input[type=radio].sheet-locate-objective:checked ~ div.sheet-locate-objective,
-input[type=radio].sheet-escape-the-depths:checked ~ div.sheet-escape-the-depths,
-input[type=radio].sheet-reveal-danger-alt:checked ~ div.sheet-reveal-danger-alt,
-input[type=radio].sheet-wield-rarity:checked ~ div.sheet-wield-rarity,
-input[type=radio].sheet-mark-failure:checked ~ div.sheet-mark-failure,
-input[type=radio].sheet-learn-from-failures:checked ~ div.sheet-learn-from-failures,
-input[type=radio].sheet-advance-threat:checked ~ div.sheet-advance-threat,
-input[type=radio].sheet-take-hiatus:checked ~ div.sheet-take-hiatus
-  display: block
-  opacity 1
-  height: auto;
+  height auto
 
 .sheet-oracle-container
   display: flex
@@ -519,7 +466,7 @@ span.sheet-oracle-result
 
 .sheet-oracle-table
   border: 2px solid #414042
-  width: 45em
+  margin-top: 1em;
 
 .sheet-oracle-table-2-column-group
   display: flex
