--- a/Ironcrunch/src/components/moves/data/list.pug
+++ b/Ironcrunch/src/components/moves/data/list.pug
@@ -28,7 +28,7 @@
     { 
       title: 'DELVE MOVES',
       moves: [
-        { name: 'Discover a Site', value: 'discover_a_sight' },
+        { name: 'Discover a Site', value: 'discover_a_site' },
         { name: 'Delve the Depths', value: 'delve_the_depths' },
         { name: 'Check Your Gear', value: 'check_your_gear' },
         { name: 'Locate Your Objective', value: 'locate_your_objective' },
