--- a/Ironcrunch/src/components/moves/moves.styl
+++ b/Ironcrunch/src/components/moves/moves.styl
@@ -1,12 +1,45 @@
 div.sheet-search-bar
-  display: flex;
-  justify-content: center;
+  display: flex
+  justify-content: center
   width 100%
   margin 1em 0em 0.5em 0em
+
+div.sheet-preview-bar
+  justify-content: space-between
+  width 100%
+  display: flex
+  margin 1em 0em 0.5em 0em
+
+div.sheet-search-preview-bar
+  display flex
+  width auto
+
+// .sheet-close-bar
+//   width 30%
+
+input.sheet-search-preview-bar
+  width 17.6em
+  border 2px solid #414042
+  border-radius 0
 
 input.sheet-search-bar
   width 50%
   border 2px solid #414042
+
+.sheet-preview-container
+  display flex
+  justify-content space-between
+  font-size 1em
+  flex-flow row
+  font-weight normal
+  height auto
+  margin-top 1em
+  .sheet-move-scroll-list
+    width 21.9em
+    overflow auto
+    border 2px solid #414042
+    padding 0
+    height 50em
 
 .sheet-move-container
   display flex
@@ -18,7 +51,7 @@ input.sheet-search-bar
   .sheet-move-scroll-list
     overflow auto
     border 2px solid #414042
-    padding: 1em;
+    padding: 1em
     width max-content
 
 .sheet-move
@@ -60,9 +93,6 @@ input.sheet-search-bar
   flex-direction: column
   margin-right: 10px
 
-.sheet-move-outline
-  border: 1px solid #414042
-
 span.sheet-move-result
   width: 36em
 
@@ -76,7 +106,6 @@ span.sheet-move-result
 .sheet-move-group-scroll
   border: 2px solid #414042
   box-sizing: border-box
-  margin 0.3em
   height fit-content
 
 .sheet-move-box:nth-child(n+2)
@@ -88,13 +117,29 @@ span.sheet-move-result
   border-bottom: 1px solid #414042
   font-size: 1.4em
   font-weight: bold
-  padding-left: 5px
-  padding-right: 5px
+  padding: 0.2em 0.5em 0.1em 0.7em
   text-transform: uppercase
   width: 11.7em
 
 .sheet-move-preview
   width: auto
+
+.sheet-move-page-footer
+  text-align right !important
+  padding-right: 1em;
+
+.sheet-move-preview-container
+  width 62%
+
+.sheet-move-preview-container
+  p
+    font-size 15px
+    margin 0
+  ul
+    margin: 2px 0px 5px 25px
+    font-size 15px
+  li
+    font-size 15px
 
 .sheet-move-show
   display: inline-flex
@@ -119,14 +164,14 @@ span.sheet-move-result
   background-color: #ddd
 
 .sheet-move-description
-  width: 26em
+  font-family 'Crimson Text', Verdana, arial, sans-serif
   padding: 1em
+  border: 2px solid #414042
 
 .sheet-move-container
   display: flex
   /* justify-content: space-around */
   /* width: 500px */
-  font-family: Verdana, Arial, sans-serif
   font-size: 1em
   font-weight: normal
 
@@ -147,16 +192,31 @@ span.sheet-preview-move-roll
   color: #ffffff
   line-height: 0.9em
   font-size: 0.9em
-  font-family: Verdana, arial, sans-serif
+  font-family: 'Crimson Text', Verdana, arial, sans-serif
   font-variant: small-caps
   font-weight: bold
   text-align: left
   padding: 0.5rem
 
+.sheet-close-preview
+  width 36.6em
+  height: auto
+  margin: 0
+  font-weight: bold
+  font-size: 14px
+  padding 0.2em 0.2em 0.2em 0.2em
+  border: 2px solid #494a4c
+  cursor: pointer
+  text-align center
+  &:hover
+    background-color #ccc
+    color #4C4D4F
+    transition .5s ease
+
 .sheet-clear-search
-  width: fit-content;
-  height: auto;
-  margin: 0;
+  width fit-content
+  height: auto
+  margin: 0
   font-weight: bold
   font-size: 14px
   padding 0.2em 0.2em 0.2em 0.2em
@@ -178,3 +238,84 @@ input.sheet-move-preview:checked ~ div.sheet-move-preview,
 input.sheet-full-move-list:checked ~ div.sheet-full-move-list
   opacity 1
   height auto
+
+/* MOVES */
+input[type=radio].sheet-face-danger:checked ~ div.sheet-face-danger,
+input[type=radio].sheet-secure-an-advantage:checked ~ div.sheet-secure-an-advantage,
+input[type=radio].sheet-gather-information:checked ~ div.sheet-gather-information,
+input[type=radio].sheet-heal:checked ~ div.sheet-heal,
+input[type=radio].sheet-resupply:checked ~ div.sheet-resupply,
+input[type=radio].sheet-make-camp:checked ~ div.sheet-make-camp,
+input[type=radio].sheet-undertake-a-journey:checked ~ div.sheet-undertake-a-journey,
+input[type=radio].sheet-reach-your-destination:checked ~ div.sheet-reach-your-destination,
+input[type=radio].sheet-compel:checked ~ div.sheet-compel,
+input[type=radio].sheet-sojourn:checked ~ div.sheet-sojourn,
+input[type=radio].sheet-draw-the-circle:checked ~ div.sheet-draw-the-circle,
+input[type=radio].sheet-forge-a-bond:checked ~ div.sheet-forge-a-bond,
+input[type=radio].sheet-test-your-bond:checked ~ div.sheet-test-your-bond,
+input[type=radio].sheet-aid-an-ally:checked ~ div.sheet-aid-an-ally,
+input[type=radio].sheet-write-your-epilogue:checked ~ div.sheet-write-your-epilogue,
+input[type=radio].sheet-enter-the-fray:checked ~ div.sheet-enter-the-fray,
+input[type=radio].sheet-strike:checked ~ div.sheet-strike,
+input[type=radio].sheet-clash:checked ~ div.sheet-clash,
+input[type=radio].sheet-turn-the-tide:checked ~ div.sheet-turn-the-tide,
+input[type=radio].sheet-end-the-fight:checked ~ div.sheet-end-the-fight,
+input[type=radio].sheet-battle:checked ~ div.sheet-battle,
+input[type=radio].sheet-endure-harm:checked ~ div.sheet-endure-harm,
+input[type=radio].sheet-face-death:checked ~ div.sheet-face-death,
+input[type=radio].sheet-companion-endure-harm:checked ~ div.sheet-companion-endure-harm,
+input[type=radio].sheet-endure-stress:checked ~ div.sheet-endure-stress,
+input[type=radio].sheet-face-desolation:checked ~ div.sheet-face-desolation,
+input[type=radio].sheet-out-of-supply:checked ~ div.sheet-out-of-supply,
+input[type=radio].sheet-face-a-setback:checked ~ div.sheet-face-a-setback,
+input[type=radio].sheet-swear-an-iron-vow:checked ~ div.sheet-swear-an-iron-vow,
+input[type=radio].sheet-fulfill-your-vow:checked ~ div.sheet-fulfill-your-vow,
+input[type=radio].sheet-reach-a-milestone:checked ~ div.sheet-reach-a-milestone,
+input[type=radio].sheet-forsake-a-vow:checked ~ div.sheet-forsake-a-vow,
+input[type=radio].sheet-advance:checked ~ div.sheet-advance,
+input[type=radio].sheet-pay-the-price:checked ~ div.sheet-pay-the-price,
+input[type=radio].sheet-ask-the-oracle:checked ~ div.sheet-ask-the-oracle,
+input[type=radio].sheet-discover-a-site:checked ~ div.sheet-discover-a-site,
+input[type=radio].sheet-delve-the-depths:checked ~ div.sheet-delve-the-depths,
+input[type=radio].sheet-find-an-opportunity:checked ~ div.sheet-find-an-opportunity,
+input[type=radio].sheet-reveal-a-danger:checked ~ div.sheet-reveal-a-danger,
+input[type=radio].sheet-check-your-gear:checked ~ div.sheet-check-your-gear,
+input[type=radio].sheet-locate-your-objective:checked ~ div.sheet-locate-your-objective,
+input[type=radio].sheet-escape-the-depths:checked ~ div.sheet-escape-the-depths,
+input[type=radio].sheet-reveal-danger-alt:checked ~ div.sheet-reveal-danger-alt,
+input[type=radio].sheet-wield-rarity:checked ~ div.sheet-wield-rarity,
+input[type=radio].sheet-mark-failure:checked ~ div.sheet-mark-failure,
+input[type=radio].sheet-learn-from-failures:checked ~ div.sheet-learn-from-failures,
+input[type=radio].sheet-advance-threat:checked ~ div.sheet-advance-threat,
+input[type=radio].sheet-take-hiatus:checked ~ div.sheet-take-hiatus,
+input[type=radio].sheet-burn-momentum:checked ~ div.sheet-burn-momentum,
+input[type=radio].sheet-make-an-effort:checked ~ div.sheet-make-an-effort,
+input[type=radio].sheet-show-resilience:checked ~ div.sheet-show-resilience,
+input[type=radio].sheet-manifest-insanity:checked ~ div.sheet-manifest-insanity,
+input[type=radio].sheet-take-on-overload:checked ~ div.sheet-take-on-overload,
+input[type=radio].sheet-inflict-harm:checked ~ div.sheet-inflict-harm,
+input[type=radio].sheet-foe-inflicts-harm:checked ~ div.sheet-foe-inflicts-harm,
+input[type=radio].sheet-hearten:checked ~ div.sheet-hearten,
+input[type=radio].sheet-patch-equipment:checked ~ div.sheet-patch-equipment,
+input[type=radio].sheet-take-a-downtime:checked ~ div.sheet-take-a-downtime,
+input[type=radio].sheet-learn-from-faults:checked ~ div.sheet-learn-from-faults,
+input[type=radio].sheet-trade:checked ~ div.sheet-trade,
+input[type=radio].sheet-take-conditional-companion:checked ~ div.sheet-take-conditional-companion,
+input[type=radio].sheet-strengthen-their-loyalty:checked ~ div.sheet-strengthen-their-loyalty,
+input[type=radio].sheet-companion-becomes-unconditional:checked ~ div.sheet-companion-becomes-unconditional,
+input[type=radio].sheet-order-conditional-companion:checked ~ div.sheet-order-conditional-companion,
+input[type=radio].sheet-not-assist-conditional-companion:checked ~ div.sheet-not-assist-conditional-companion,
+input[type=radio].sheet-test-their-loyalty:checked ~ div.sheet-test-their-loyalty,
+input[type=radio].sheet-conditional-companion-abandons:checked ~ div.sheet-conditional-companion-abandons,
+input[type=radio].sheet-conditional-companion-acts:checked ~ div.sheet-conditional-companion-acts
+  opacity 1
+  height auto
+
+::-webkit-scrollbar
+  -webkit-appearance none
+  width 7px
+
+::-webkit-scrollbar-thumb
+  border-radius 4px
+  background-color rgba(0, 0, 0, .5);
+  box-shadow 0 0 1px rgba(255, 255, 255, .5)
