--- a/Ironcrunch/src/components/moves/moves.pug
+++ b/Ironcrunch/src/components/moves/moves.pug
@@ -1,5 +1,6 @@
 include ./data/list.pug
 include ./mixins/nav.pug
+include ./mixins/moves.pug
 
 //- ## Search Bar
 input(type='radio' class='sheet-hide sheet-full-move-list' name='attr_move_view' value='1' checked)
@@ -24,13 +25,15 @@ div.sheet-full-move-list.sheet-showhide
 //- ## Move Details
 input(type='radio' class='sheet-hide sheet-move-preview' name='attr_move_view' value='2')
 div.sheet-move-preview.sheet-showhide
-  div.sheet-search-bar
-    input(type='text' class='sheet-search-bar' name='attr_move_search' placeholder='Search')
-    label.sheet-clear-search CLEAR
-      input(type='checkbox' class='sheet-hide' name='attr_clear_search')
-    label.sheet-close-preview CLOSE PREVIEW
-      input(type='checkbox' class='sheet-hide' name='attr_close_move_preview')
-  div.sheet-move-container
+  div.sheet-preview-bar
+    div.sheet-search-preview-bar
+      input(type='text' class='sheet-search-preview-bar' name='attr_move_search' placeholder='Search')
+      label.sheet-clear-search CLEAR
+        input(type='checkbox' class='sheet-hide' name='attr_clear_search')
+    div.sheet-close-bar
+      label.sheet-close-preview CLOSE PREVIEW
+        input(type='checkbox' class='sheet-hide' name='attr_close_move_preview')
+  div.sheet-preview-container
     div.sheet-move-scroll-list
       each group in moveGroups
         div.sheet-move-group-scroll
@@ -42,11 +45,65 @@ div.sheet-move-preview.sheet-showhide
                 input(type='radio' class='sheet-hide' name='attr_selected_move' value=move.value)
                 input(type='checkbox' class='sheet-hide sheet-move-highlight' name=`attr_${move.value}_highlight`)
                 div.sheet-move-name=move.name
-    div.sheet-move-preview
-      div.sheet-move-preview-title
-        h3 PAY THE PRICE
-//- Scroll List of moves with collapsable groups
-//- Preview of Move
-//- Button to close preview and go to previous page
-//- Options at bottom of page for rolling etc
-//- Buttons to switch between moves in group
+    div.sheet-move-preview-container
+      +faceDanger
+      +secureAnAdvantage
+      +gatherInformation
+      +undertakeAJourney
+      +reachYourDestination
+      +discoverASite
+      +delveTheDepths
+      +checkYourGear
+      +locateYourObjective
+      +escapeTheDepths
+      +compel
+      +sojourn
+      +aidYourAlly
+      +drawTheCircle
+      +forgeABond
+      +testYourBond
+      +writeYourEpilogue
+      +conditionalCompanionActs
+      +takeConditionalCompanion
+      +strengthenTheirLoyalty
+      +companionBecomesUnconditional
+      +orderConditionalCompanion
+      +notAssistConditionalCompanion
+      +testTheirLoyalty
+      +conditionalCompanionAbandons
+      +enterTheFray
+      +strike
+      +inflictHarm
+      +foeInflictsHarm
+      +clash
+      +endTheFight
+      +battle
+      +heal
+      +hearten
+      +patchEquipment
+      +resupply
+      +makeCamp
+      +takeADowntime
+      +endureHarm
+      +faceDeath
+      +faceASetback
+      +endureStress
+      +faceDesolation
+      +takeOnOverload
+      +outOfSupply
+      +swearAnIronVow
+      +reachAMilestone
+      +fulfillYourVow
+      +forsakeYourVow
+      +learnFromFaults
+      +advance
+      +trade
+      +payThePrice
+      +showResilience
+      +turnTheTide
+      +burnMomentum
+      +makeAnEffort
+      +revealADanger
+      +manifestInsanity
+      +askTheOracle
+      +findAnOpportunity
