--- a/Hermanos-de-sangre/hermanosdesangre.css
+++ b/Hermanos-de-sangre/hermanosdesangre.css
@@ -1,16 +1,33 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed|Special+Elite&display=swap');
 
-/* TABS */
-/*Configure the tab buttons*/
-.sheet-character,.sheet-stats,.sheet-inventory {display: none;}
+
+/* JUGADOR - PNJ */
+div.sheet-pestana-jugador,
+div.sheet-pestana-pnj,
+div.sheet-pestana-vehiculo{ display: none; }
+input.sheet-pestana-jugador:checked ~ div.sheet-pestana-jugador { display: block; }
+input.sheet-pestana-pnj:checked ~ div.sheet-pestana-pnj { display: block; }
+input.sheet-pestana-vehiculo:checked ~ div.sheet-pestana-vehiculo { display: block; }
+
+
+.sheet-inside-personal,
+.sheet-inside-estadistica,
+.sheet-inside-inventario {
+	display: none;
+}
 
 /* show the selected tab */
-.sheet-tabstoggle[value="character"] ~ div.sheet-character,
-.sheet-tabstoggle[value="stats"] ~ div.sheet-stats,
-.sheet-tabstoggle[value="inventory"] ~ div.sheet-inventory {
+.sheet-tabstoggle[value="personal"] ~ div.sheet-inside-personal,
+.sheet-tabstoggle[value="estadistica"] ~ div.sheet-inside-estadistica,
+.sheet-tabstoggle[value="inventario"] ~ div.sheet-inside-inventario {
 	display: block;
 }
+
+
+/* TABS */
 .sheet-tab-button{
+    background-color: #C31F26;       
+    font-family: 'Roboto Condensed', sans-serif;
 	color: white;
 	float: left;
 	border: none;
@@ -20,15 +37,25 @@
 	font-size: 17px;
 	width: 33%;
 }
-.sheet-tab-button:hover {background-color: #777;}
+.sheet-tab-button:hover {
+    background-color: #E7A5A8;
+}
+#sheet-button-clicked{
+    background-color: #E7A5A8;
+    color: black;
+}
+
 
 /* DATA INPUT */
-.sheet-label-red, input, textarea,.sheet-button-label{
+.sheet-label-red, input, textarea,.sheet-button-label, select{
 	border: 0.8px solid black;
 	border-radius: 0 !important;
 	margin-bottom: 0;
 }
-input{
+select{
+    display: flex;
+}
+input[type="number"]{
     text-align: center;
 }
 .sheet-label-red, .sheet-button-label{
@@ -44,6 +71,70 @@ textarea{
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+
+.repitem textarea {
+	height: auto !important;
+}
+
+.sheet-textarea-max-50{max-height: 50px !important;}
+
+.sheet-button-label, .sheet-label-red{
+    padding-left: 1rem !important;
+}
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 0px;
+    text-overflow: '';
+}
+
+
+/* Switch */
+.sheet-switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+.sheet-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+.sheet-slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+.sheet-slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+input:checked + .sheet-slider {
+    background-color: #C31F26;
+}
+input:focus + .sheet-slider {
+    box-shadow: 0 0 1px #C31F26;
+}
+input:checked + .sheet-slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
 
 /* TEXT */
 .sheet-text-vertical{
@@ -87,7 +178,6 @@ textarea{
 
 /* BUTTONS */
 .sheet-button-label:before { content: "" !important;}
-
 .sheet-button-label{
 	background-image: none;
 	box-shadow: none;
@@ -109,7 +199,7 @@ textarea{
 .sheet-column-nw{display: flex;flex-flow: column nowrap;min-width: 0;min-height: 0;}
 
 /* Rows*/
-.sheet-row-w{display: flex;flex-flow: row nowrap;min-width: 0;min-height: 0;}
+.sheet-row-w{display: flex;flex-flow: row wrap;min-width: 0;min-height: 0;}
 .sheet-row-nw{display: flex;flex-flow: row nowrap;min-width: 0;min-height: 0;}
 
 /* Rows full height inside column */
@@ -125,6 +215,7 @@ textarea{
 
 .sheet-content-sa{justify-content: space-around;}
 .sheet-content-center{justify-content: center;}
+.sheet-content-st{align-items: stretch}
 
 /* Width */
 .sheet-width-100{width: 100%;}
@@ -140,30 +231,146 @@ textarea{
 .sheet-width-15{width: 15%;}
 .sheet-width-10{width: 10%;}
 .sheet-width-5{width: 5%;}
+
+
+.sheet-max-width-300{max-width: 300px;}
+.sheet-max-width-250{max-width: 250px;}
+.sheet-max-width-250{max-width: 200px;}
+.sheet-max-width-125{max-width: 125px;}
+.sheet-max-width-50{max-width: 50px;}
+
 /* Height */
 .sheet-height-100{height: 100%;}
 
+.sheet-max-height-50{max-height: 50px;}
+.sheet-max-height-150{max-height: 150px;}
+.sheet-max-height-210{max-height: 210px;}
 
+.sheet-overflow-025{flex:0.25;overflow: hidden;}
 .sheet-overflow-1{flex:1;overflow: hidden;}
 .sheet-overflow-2{flex:2;overflow: hidden;}
 .sheet-overflow-3{flex:3;overflow: hidden;}
 
-.sheet-padding-t-5{
-	padding-top: 5px;
+.sheet-flex-30{flex: 0 0 30em;}
+.sheet-flex-25{flex: 0 0 25em;}
+.sheet-flex-20{flex: 0 0 20em;}
+.sheet-flex-15{flex: 0 0 15em;}
+.sheet-flex-10{flex: 0 0 10em;}
+.sheet-flex-5{flex: 0 0 5em;}
+
+.sheet-padding-l-0{padding-left: 0px !important;}
+.sheet-padding-r-0{padding-right: 0px !important;}
+
+
+
+.sheet-padding-t-5{padding-top: 5px;}
+.sheet-padding-t-15{padding-top: 15px;}
+.sheet-padding-t-35{padding-top: 35px;}
+
+.sheet-padding-b-10{padding-bottom: 10px;}
+.sheet-padding-b-15{padding-bottom: 15px;}
+.sheet-padding-b-50{padding-bottom:  50px !important;}
+
+.sheet-margin-b-50{margin-bottom:  50px !important;}
+
+.sheet-margin-l-0{
+    margin-left: 0px !important;    
 }
-.sheet-padding-t-15{
-	padding-top: 15px;
-}
-.sheet-padding-b-10{
-	padding-bottom: 10px;
-}
-.sheet-padding-b-50{
-	padding-bottom:  50px !important;
-}
-.sheet-margin-b-50{
-	margin-bottom:  50px !important;
+.sheet-margin-r-0{
+    margin-right: 0px !important;    
 }
 
+
+.sheet-col-xs,
+.sheet-col-xs-1,
+.sheet-col-xs-2,
+.sheet-col-xs-3,
+.sheet-col-xs-4,
+.sheet-col-xs-5,
+.sheet-col-xs-6,
+.sheet-col-xs-7,
+.sheet-col-xs-8,
+.sheet-col-xs-9,
+.sheet-col-xs-10,
+.sheet-col-xs-11,
+.sheet-col-xs-12 {
+  box-sizing: border-box;
+  -ms-flex: 0 0 auto;
+  -webkit-box-flex: 0;
+  flex: 0 0 auto;
+  padding-right: 1rem;
+  padding-left: 1rem;
+}
+
+.sheet-col-xs {
+  -webkit-flex-grow: 1;
+  -ms-flex-positive: 1;
+  -webkit-box-flex: 1;
+  flex-grow: 1;
+  -ms-flex-preferred-size: 0;
+  flex-basis: 0;
+  max-width: 100%;
+}
+.sheet-col-xs-1 {
+  -ms-flex-preferred-size: 8.333%;
+  flex-basis: 8.333%;
+  max-width: 8.333%;
+}
+.sheet-col-xs-2 {
+  -ms-flex-preferred-size: 16.667%;
+  flex-basis: 16.667%;
+  max-width: 16.667%;
+}
+.sheet-col-xs-3 {
+  -ms-flex-preferred-size: 25%;
+  flex-basis: 25%;
+  max-width: 25%;
+}
+.sheet-col-xs-4 {
+  -ms-flex-preferred-size: 33.333%;
+  flex-basis: 33.333%;
+  max-width: 33.333%;
+}
+.sheet-col-xs-5 {
+  -ms-flex-preferred-size: 41.667%;
+  flex-basis: 41.667%;
+  max-width: 41.667%;
+}
+.sheet-col-xs-6 {
+  -ms-flex-preferred-size: 50%;
+  flex-basis: 50%;
+  max-width: 50%;
+}
+.sheet-col-xs-7 {
+  -ms-flex-preferred-size: 58.333%;
+  flex-basis: 58.333%;
+  max-width: 58.333%;
+}
+.sheet-col-xs-8 {
+  -ms-flex-preferred-size: 66.667%;
+  flex-basis: 66.667%;
+  max-width: 66.667%;
+}
+.sheet-col-xs-9 {
+  -ms-flex-preferred-size: 75%;
+  flex-basis: 75%;
+  max-width: 75%;
+}
+.sheet-col-xs-10 {
+  -ms-flex-preferred-size: 83.333%;
+  flex-basis: 83.333%;
+  max-width: 83.333%;
+}
+.sheet-col-xs-11 {
+  -ms-flex-preferred-size: 91.667%;
+  flex-basis: 91.667%;
+  max-width: 91.667%;
+}
+.sheet-col-xs-12 {
+  -ms-flex-preferred-size: 100%;
+  flex-basis: 100%;
+  max-width: 100%;
+}
 
 
 /* TRICKS */
@@ -180,26 +387,49 @@ textarea{
 
 /* REPEATING */
 .repitem{
-    display: flex !important;
-    flex-flow: row nowrap !important;   
-    width: 100% !important;
+    display: flex;
+    align-items: stretch;
+    margin-bottom: 3px;
+    justify-content:flex-start;
+    width: 100%;
 }
-
+.repcontainer{
+    width: 100%;
+}
 .repcontrol{
     display: flex !important;
     flex-flow: row nowrap !important;
 }
-/* Overlay the +Add button with content text. */
-[data-groupname=repeating_armas] > button.btn.repcontrol_add::after {
+
+/* +ADD - MODIFY BUTTON */
+[data-groupname=repeating_armas] > button.btn.repcontrol_add,[data-groupname=repeating_armas] > button.btn.repcontrol_edit{
+        height: 20px;
+}
+
+[data-groupname=repeating_armas] > button.btn.repcontrol_add::after,
+[data-groupname=repeating_inventario] > button.btn.repcontrol_add::after,
+[data-groupname=repeating_proteccion] > button.btn.repcontrol_add::after,
+[data-groupname=repeating_habilidades] > button.btn.repcontrol_add::after {
     content: "Nuevo";
-    background-color:#000;
+    background-color: #C31F26;
+	font-family: 'Roboto Condensed', sans-serif;
+	text-align: left;
+	color: white;
+	text-transform: uppercase;
     margin-left:-30px;
 }
 
 /* Overlay the Modify/Done button.  Overlying text is static */
-[data-groupname=repeating_armas] > button.btn.repcontrol_edit::after {
+[data-groupname=repeating_armas] > button.btn.repcontrol_edit::after,
+[data-groupname=repeating_inventario] > button.btn.repcontrol_edit::after,
+[data-groupname=repeating_proteccion] > button.btn.repcontrol_edit::after,
+[data-groupname=repeating_habilidades] > button.btn.repcontrol_edit::after  {
     content: "Modificar";
-    background-color:#000;
+    background-color: #C31F26;
+	font-family: 'Roboto Condensed', sans-serif;
+	text-align: left;
+	color: white;
+	text-transform: uppercase;
     margin-left:-36px;
 }
 
@@ -208,7 +438,7 @@ textarea{
 .charsheet .repcontrol_edit,
 .charsheet .repcontrol_del {
     display: inline-flex;
-    background: #000;
+    background: #C31F26;
     color: white;
     box-shadow:none;
     font-size:0.9em;
@@ -235,11 +465,79 @@ textarea{
 	font-family: 'Special Elite', cursive;
 	font-size: 50px;
 	min-height: 50px;
-	margin: 35px auto 0 auto;
+	margin: 15px auto 0 auto;
 }
 
 .sheet-col-flex-1{
 	display: flex;
 	flex-flow: row wrap;
 	width: 100%;
+}
+
+
+
+
+
+.sheet-rolltemplate-atacar .sheet-container {
+    background-color: #ffffff;
+    border: 1px solid;
+    padding: 2px;
+    width: 189px;
+}
+
+.sheet-rolltemplate-atacar .sheet-container h1 {
+    color: rgb(126, 45, 64);
+    font-size: 1.2em;
+    font-variant: small-caps;
+    line-height: 20px;
+}
+
+.sheet-rolltemplate-atacar div {
+    padding: 2px;
+};
+ 
+.sheet-rolltemplate-atacar span {
+    color: rgb(126, 45, 64);
+    font-family: "Times New Roman", Times, serif;
+    font-size: 1.2em;
+    font-variant: small-caps;
+    line-height: 1.6em;
+    padding-left: 5px;
+    text-align: left;
+}
+ 
+.sheet-rolltemplate-atacar .sheet-subheader {
+    color: #000;
+    font-size: 1em;
+    font-style: italic;
+}
+ 
+.sheet-rolltemplate-atacar .sheet-arrow-right {
+    border-bottom: 2px solid transparent;
+    border-left: 180px solid rgb(126, 45, 64);
+    border-top: 2px solid transparent;
+}
+ 
+.sheet-rolltemplate-atacar .sheet-tcat {
+    font-style: italic;
+}
+ 
+.sheet-rolltemplate-atacar .inlinerollresult  {
+    background-color: #ffffff;
+    border: none;
+}
+ 
+.sheet-rolltemplate-atacar .inlinerollresult.fullcrit {
+    color: #3FB315;
+    border: none;
+}
+ 
+.sheet-rolltemplate-atacar .inlinerollresult.fullfail {
+    color: #B31515;
+    border: none;
+}
+ 
+.sheet-rolltemplate-atacar .inlinerollresult.importandivoll {
+    color: #4A57ED;
+    border: none;
 }
