--- a/Inspectress-Inc/Inspectres.css
+++ b/Inspectress-Inc/Inspectres.css
@@ -91,7 +91,7 @@ span.sheet-dee {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     font-size: 1rem;
-    width: 150%;
+    width: 100%;
 }
   
 .sheet-table td, th {
@@ -102,4 +102,26 @@ span.sheet-dee {
   
 .sheet-table  tr:nth-child(even) {
     background-color: #dddddd;
+}
+
+/*CUSTOM ROLLTEMPLATE*/
+.sheet-rolltemplate-atributes table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.sheet-rolltemplate-atributes table caption {
+    border: 1px solid black;
+    background:darkslategray;
+    color:white;
+    text-align: left;
+    padding: 8px;
+}
+
+.sheet-rolltemplate-atributes table td {
+    border: 1px solid black;
+    background:white;
+    color:black;
+    text-align: left;
+    padding: 8px;
 }
