--- a/Ironcrunch/src/Ironcrunch.styl
+++ b/Ironcrunch/src/Ironcrunch.styl
@@ -152,6 +152,21 @@ textarea
   max-width 828px
   border: 2px solid #4C4D4F
 
+.sheet-btn
+  display: inline
+  width: 100%
+  font-weight: bold
+  font-size: 14px
+  padding 0
+  margin 0.5em
+  height 40px
+  padding 0.2em 0.2em 0.2em 0.2em
+  border: 2px solid #494a4c
+  cursor: pointer
+  &:hover
+    background #ccc
+    transition .5s ease
+
 // Pages
 @import './pages/index'
 
