--- a/Ironcrunch/src/components/moves/moves.pug
+++ b/Ironcrunch/src/components/moves/moves.pug
@@ -1,6 +1,5 @@
-include ./data/list.pug
-include ./mixins/nav.pug
-include ./mixins/moves.pug
+include ./data/list
+include ./mixins/container
 
 //- ## Search Bar
 input(type='radio' class='sheet-hide sheet-full-move-list' name='attr_move_view' value='1' checked)
@@ -46,64 +45,64 @@ div.sheet-move-preview.sheet-showhide
                 input(type='checkbox' class='sheet-hide sheet-move-highlight' name=`attr_${move.value}_highlight`)
                 div.sheet-move-name=move.name
     div.sheet-move-preview-container
-      +faceDanger
-      +secureAnAdvantage
-      +gatherInformation
-      +undertakeAJourney
-      +reachYourDestination
-      +discoverASite
-      +delveTheDepths
-      +checkYourGear
-      +locateYourObjective
-      +escapeTheDepths
-      +compel
-      +sojourn
-      +aidYourAlly
-      +drawTheCircle
-      +forgeABond
-      +testYourBond
-      +writeYourEpilogue
-      +conditionalCompanionActs
-      +takeConditionalCompanion
-      +strengthenTheirLoyalty
-      +companionBecomesUnconditional
-      +orderConditionalCompanion
-      +notAssistConditionalCompanion
-      +testTheirLoyalty
-      +conditionalCompanionAbandons
-      +enterTheFray
-      +strike
-      +inflictHarm
-      +foeInflictsHarm
-      +clash
-      +endTheFight
-      +battle
-      +heal
-      +hearten
-      +patchEquipment
-      +resupply
-      +makeCamp
-      +takeADowntime
-      +endureHarm
-      +faceDeath
-      +faceASetback
-      +endureStress
-      +faceDesolation
-      +takeOnOverload
-      +outOfSupply
-      +swearAnIronVow
-      +reachAMilestone
-      +fulfillYourVow
-      +forsakeYourVow
-      +learnFromFaults
-      +advance
-      +trade
-      +payThePrice
-      +showResilience
-      +turnTheTide
-      +burnMomentum
-      +makeAnEffort
-      +revealADanger
-      +manifestInsanity
-      +askTheOracle
-      +findAnOpportunity
+      include ./content/advance
+      include ./content/aid-your-ally
+      include ./content/ask-the-oracle
+      include ./content/battle
+      include ./content/burn-momentum
+      include ./content/check-your-gear
+      include ./content/clash
+      include ./content/companion-becomes-unconditional
+      include ./content/compel
+      include ./content/conditional-companion-abandons
+      include ./content/conditional-companion-acts
+      include ./content/delve-the-depths
+      include ./content/discover-a-site
+      include ./content/draw-the-circle
+      include ./content/end-the-fight
+      include ./content/endure-harm
+      include ./content/endure-stress
+      include ./content/enter-the-fray
+      include ./content/escape-the-depths
+      include ./content/face-a-setback
+      include ./content/face-danger
+      include ./content/face-death
+      include ./content/face-desolation
+      include ./content/find-an-opportunity
+      include ./content/foe-inflicts-harm
+      include ./content/forge-a-bond
+      include ./content/forsake-your-vow
+      include ./content/fulfill-your-vow
+      include ./content/gather-information
+      include ./content/heal
+      include ./content/hearten
+      include ./content/inflict-harm
+      include ./content/learn-from-faults
+      include ./content/locate-your-objective
+      include ./content/make-an-effort
+      include ./content/make-camp
+      include ./content/manifest-insanity
+      include ./content/not-assist-conditional-companion
+      include ./content/order-conditional-companion
+      include ./content/out-of-supply
+      include ./content/patch-equipment
+      include ./content/pay-the-price
+      include ./content/reach-a-milestone
+      include ./content/reach-your-destination
+      include ./content/resupply
+      include ./content/reveal-a-danger
+      include ./content/secure-an-advantage
+      include ./content/show-resilience
+      include ./content/sojourn
+      include ./content/strengthen-their-loyalty
+      include ./content/strike
+      include ./content/swear-an-iron-vow
+      include ./content/take-a-downtime
+      include ./content/take-conditional-companion
+      include ./content/take-on-overload
+      include ./content/test-their-loyalty
+      include ./content/test-your-bond
+      include ./content/trade
+      include ./content/turn-the-tide
+      include ./content/undertake-a-journey
+      include ./content/write-your-epilogue
