--- a/Ironcrunch/src/components/moves/moves.styl
+++ b/Ironcrunch/src/components/moves/moves.styl
@@ -14,9 +14,6 @@ div.sheet-search-preview-bar
   display flex
   width auto
 
-// .sheet-close-bar
-//   width 30%
-
 input.sheet-search-preview-bar
   width 17.6em
   border 2px solid #414042
@@ -310,6 +307,26 @@ input[type=radio].sheet-conditional-companion-abandons:checked ~ div.sheet-condi
 input[type=radio].sheet-conditional-companion-acts:checked ~ div.sheet-conditional-companion-acts
   opacity 1
   height auto
+
+input.sheet-danger-situation:checked ~ div.sheet-danger-situation,
+input.sheet-danger-road:checked ~ div.sheet-danger-road,
+input.sheet-danger-character:checked ~ div.sheet-danger-character 
+  opacity 1
+  height auto
+
+.sheet-move-nav-child
+  display flex
+  width fit-content
+  height 1.3em
+  padding 0
+
+div.sheet-move-nav-content
+  padding 0.2em
+
+input.sheet-table-btn:checked ~ div.sheet-move-nav-content
+  background #4C4D4F
+  color white
+  transition .5s ease
 
 ::-webkit-scrollbar
   -webkit-appearance none
