--- a/Ironcrunch/src/components/vows/vows.pug
+++ b/Ironcrunch/src/components/vows/vows.pug
@@ -23,14 +23,14 @@ div.sheet-vows
     div.sheet-vow
       div
         //- TODO: Mark progress based on difficulty
-        label.sheet-mark-vow MARK
+        label.sheet-btn MARK
           input(class="sheet-mark-vow sheet-hide" type="checkbox" name="attr_mark_progress")
-        label.sheet-vow-clear-label CLEAR
+        label.sheet-btn CLEAR
           input(class="sheet-clear-vow sheet-hide" type="checkbox" name="attr_clear_vow")
         each index in track
           select(name=`attr_vow-${index}` class="sheet-progress-input")
             +progressBox
-        label.sheet-fulfill-vow FULFILL 
+        label.sheet-btn FULFILL 
           button(
             type="roll"
             class='sheet-hide'
