new fields coat of arms + motto + layout fixes

--- a/Pendragon-french/Pendragon-french.css
+++ b/Pendragon-french/Pendragon-french.css
@@ -1,5 +1,15 @@
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+input[type="number"]:hover,
+input[type="number"]:focus {
+    -moz-appearance: number-input;
+}
+
 .charsheet{
     --pendragon-blue: #16619b;
+    --pale-yellow: #fffbca;
 }
 
 h2, h3 {
@@ -30,6 +40,20 @@ div.sheet-cale {
     margin-left: 0px;
     padding-left: 10px;
 }
+.charsheet div.sheet-tab-content.sheet-tab3 {
+    margin-left: 0px;
+    padding-left: 10px;
+}
+.charsheet div.sheet-tab-content.sheet-tab4 {
+    margin-left: 0px;
+    padding-left: 10px;
+}
+.charsheet div.sheet-tab-content.sheet-tab5 {
+    margin-left: 0px;
+    padding-left: 10px;
+    padding-top: 10px;
+}
+
 .sheet-logo {
     max-height: 100px;
 }
@@ -46,6 +70,45 @@ div.sheet-center {
     font-size: 1.5em;
     color: var(--pendragon-blue);
     margin-bottom : 5px;
+}
+
+.sheet-header {
+    width: 100%;
+    vertical-align: top;
+}
+
+.sheet-header h3{
+    display: inline;
+    vertical-align: top;
+    padding-right: 10px;
+}
+
+.sheet-logo {
+    vertical-align: top;
+}
+.sheet-h2-width {
+    display: inline;
+    width: 85px;
+}
+
+.sheet-header textarea {
+    width: calc(100% - 85px);
+    height: 36px;
+    resize: none;
+}
+
+.sheet-header-right {
+    width: calc(100% - 295px);
+    padding-left: 10px;
+    vertical-align: top;
+}
+
+.sheet-header-line {
+    vertical-align: center;
+}
+
+.sheet-inline-block {
+    display:inline-block;
 }
 
 .sheet-inline {
@@ -100,6 +163,7 @@ input.sheet-t1c2-big[type=number] {
 
 label.sheet-t1c2 {
     width:90px;
+    margin-bottom: 5px;
 }
 input.sheet-t1c2 {
     width:45px;
@@ -107,6 +171,9 @@ input.sheet-t1c2 {
 }
 input.sheet-t1c3-big {
     font-size: 1.5em;
+}
+input.sheet-tic3 {
+    vertical-align: unset;
 }
 
 .sheet-t1c3 {
@@ -134,6 +201,10 @@ input.sheet-t1c3-big {
     border: none;
 }
 
+.sheet-h3-black {
+    color: black;
+    margin-bottom: 10px;
+}
 
 
 input.sheet-tab + span::before
@@ -226,6 +297,10 @@ div.sheet-tab-content
     padding: 5px;
 }
 
+.sheet-tab3 h2 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
 /* sheet */
 
@@ -238,18 +313,17 @@ div.sheet-tab-content
 .sheet-col1 {
     display: inline-block;
     width: 40%;
+    padding-top: 10px;
 }
 .sheet-col2 {
     display: inline-block;
     vertical-align: top;
-    padding-top: 10px;
     padding-left: 15px;
     width: 23%;
 }
 .sheet-col3 {
     display: inline-block;
     vertical-align: top;
-    padding-top: 10px;
     width: 33%;
 }
 
@@ -303,6 +377,12 @@ div.sheet-tab-content
     font-size: 1em;
     font-weight: bold;
     text-align: center;
+}
+
+.sheet-area-notes {
+    width: 98%;
+    height: 40px;
+    resize: vertical;
 }
 
 select.sheet-dtype {
@@ -399,6 +479,181 @@ sheet-titre2 {
     margin-bottom: 6px;
 }
 
+  /* onglet gens */
+
+.sheet-gens {
+    width: 99%;
+    margin: 5px;
+    border: 2px solid black;
+}
+.sheet-gens th{
+    color: var(--pendragon-blue);
+    background-color: var(--pale-yellow);
+}
+
+.sheet-gens tr {
+    border-bottom: 2px solid black;
+    vertical-align: top;
+    text-align: center;
+}
+.sheet-gens td {
+    padding: 5px;
+    vertical-align: top;
+    text-align: center;
+}
+.sheet-gens input{
+    width: 100%;
+}
+
+.sheet-gens .sheet-table-col3 input {
+    display: inline;
+    width: 60%;
+}
+.sheet-gens .sheet-table-col1 {
+    width: 20%;
+}
+.sheet-gens .sheet-table-col2 {
+    width: 20%;
+}
+.sheet-gens .sheet-table-col3 {
+    width: 40%;
+}
+.sheet-gens .sheet-table-col3  input[type=text]{
+    width: 68%;
+}
+.sheet-gens .sheet-table-col3  input[type=number]{
+    width: 35px;
+}
+.sheet-gens .sheet-table-col3  input[type=checkbox]{
+    width: 15px;
+}
+
+/*.sheet-gens .sheet-inline {*/
+/*    display: inline;*/
+/*}*/
+
+
+.sheet-gens .sheet-table-col4 {
+    width: 15%;
+}
+.sheet-gens .sheet-table-col4 textarea{
+    width: 90%;
+    height: 54px;
+    resize: vertical;
+    margin-bottom: 0px;
+    padding-top: 0px;
+}
+
+/* onglet domaine */
+.sheet-nomdom {
+    font-size: 1.2em;
+    width: 34%;
+}
+
+.sheet-area {
+    display: block;
+    width: 98%;
+    height: 40px;
+    resize: vertical;
+}
+
+.sheet-infras, .sheet-maintenance {
+    width: 99%;
+    margin: 5px;
+    border: 2px solid black;
+}
+.sheet-infras th, .sheet-maintenance th {
+    color: var(--pendragon-blue);
+    background-color: var(--pale-yellow);
+}
+
+.sheet-infras tr, .sheet-maintenance tr {
+    border-bottom: 2px solid black;
+    vertical-align: top;
+    text-align: center;
+}
+.sheet-infras td, .sheet-maintenance td{
+    padding: 5px;
+    vertical-align: top;
+    text-align: center;
+}
+.sheet-infras input, .sheet-maintenance input{
+    width: 100%;
+}
+
+.sheet-infras .sheet-table-col1 {
+    width: 7%;
+}
+.sheet-infras .sheet-table-col2 {
+    width: 20%;
+}
+.sheet-infras .sheet-table-col3 {
+    width: 8%;
+}
+.sheet-infras .sheet-table-col4 {
+    width: 8%;
+}
+.sheet-infras .sheet-table-col5 {
+    width: 10%;
+}
+.sheet-infras .sheet-table-col6 {
+    width: 14%;
+}
+.sheet-infras .sheet-table-col7 {
+    width: 7%;
+}
+.sheet-infras .sheet-table-col8 {
+    width: 25%;
+}
+
+.sheet-areaI {
+    width: 90%;
+    height: 18px;
+    resize: vertical;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+.sheet-maintenance .sheet-table-col1 {
+    width: 7%;
+}
+.sheet-maintenance .sheet-table-col2 {
+    width: 18%;
+}
+.sheet-maintenance .sheet-table-col3 {
+    width: 8%;
+}
+.sheet-maintenance .sheet-table-col4 {
+    width: 6%;
+}
+.sheet-maintenance .sheet-table-col5 {
+    width: 8%;
+}
+.sheet-maintenance .sheet-table-col6 {
+    width: 11%;
+}
+.sheet-maintenance .sheet-table-col7 {
+    width: 7%;
+}
+.sheet-maintenance .sheet-table-col8 {
+    width: 7%;
+}
+.sheet-maintenance .sheet-table-col9 {
+    width: 7%;
+}
+.sheet-maintenance .sheet-table-col10 {
+    width: 10%;
+}
+.sheet-maintenance .sheet-table-col11 {
+    width: 11%;
+}
+
+.sheet-maintenance select {
+    height: 20px;
+}
+
+
   /*rolltemplate pendragon*/
   .sheet-rolltemplate-pendragon table, .sheet-rolltemplate-pendragon-degats table {
       width: 95%;
@@ -482,6 +737,7 @@ fieldset.repeating_horse+.repcontainer .repitem {
     /*display: inline-block;*/
     /*margin-right: 2em;*/
     height: 110px;
+    margin-bottom: 5px;
 }
 
 
